force-app/main/default/objects/Medical_History__c/Medical_History__c.object-meta.xml
<CustomObject>
    <description>PHI clinical history keyed to a patient Contact. OWD Private. Access is granted via PHI_Emergency_Access PS (compliance break-glass) or via INT-019's Apex-managed sharing to practitioners on Accepted assignments.</description>
    <label>Medical History</label>
    <nameField>
        <displayFormat>MH-{00000}</displayFormat>
        <label>Medical History Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Medical Histories</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>