force-app/main/default/objects/Medical_History__c/fields/Allergy__c.field-meta.xml
<CustomField>
    <fullName>Allergy__c</fullName>
    <label>Allergy</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>