force-app/main/default/objects/Medical_History__c/fields/Diagnosis__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis__c</fullName>
    <description>Primary diagnosis label. Shield encryption pending Q-004-1 classification matrix — probabilistic per design proposal.</description>
    <label>Diagnosis</label>
    <length>255</length>
    <type>Text</type>
</CustomField>