force-app/main/default/objects/Medical_History__c/fields/Diagnosis_Code__c.field-meta.xml
<CustomField>
    <fullName>Diagnosis_Code__c</fullName>
    <description>Standardized diagnosis code (ICD-10 or equivalent). Shield encryption pending Q-004-1 — deterministic per design proposal for equality-match compliance queries.</description>
    <label>Diagnosis Code</label>
    <length>40</length>
    <type>Text</type>
</CustomField>