force-app/main/default/objects/Medical_History__c/fields/Encounter_Date__c.field-meta.xml
<CustomField>
    <fullName>Encounter_Date__c</fullName>
    <label>Encounter Date</label>
    <type>Date</type>
</CustomField>