force-app/main/default/objects/Medical_History__c/fields/Medication__c.field-meta.xml
<CustomField>
    <fullName>Medication__c</fullName>
    <label>Medication</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>