force-app/main/default/objects/Medical_History__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>The patient this clinical history belongs to. Restrict-delete so a Contact with medical history cannot be silently removed.</description>
    <label>Patient</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Medical Histories</relationshipLabel>
    <relationshipName>Medical_Histories</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>